--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -7,19 +7,20 @@
 }
 
 .header-left {
-    width: 70%;
     align-self: center;
+    width: 300px;
 }
 
 .header-right {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 50%;
+    width: calc(100% - 200px);
 }
 
 .header-font-size {
     font-size: 20px;
+    font-family: Arial;
 }
 
 
