--- a/frontend/src/components/InputAndLabel/InputAndLabel.css
+++ b/frontend/src/components/InputAndLabel/InputAndLabel.css
@@ -17,3 +17,22 @@
     display: flex;
     flex-direction: column;
 }
+
+.inputStyle {
+    width: 340px;
+    height: 52px;
+    border-radius: 3px;
+    border: solid 1px #ebebeb;
+    background-color: #ffffff;
+}
+
+::placeholder {
+    width: 142px;
+    height: 24px;
+    font-family: Helvetica;
+    font-size: 20px;
+    font-weight: bold;
+    padding-left: 17px;
+    color: #979797;
+
+}
