--- a/frontend/src/components/RestaurantCard/RestaurantCard.css
+++ b/frontend/src/components/RestaurantCard/RestaurantCard.css
@@ -2,10 +2,12 @@
 .RestaurantCard {
     border: 1px solid red;
     margin: 10px;
+    width: 271px;
+    flex-basis: 271px;
 }
 
 .RestaurantCard-img {
-    width: 271px;
+    width: 100%;
     height: 284px;
     object-fit: cover;
 }
