added userCard, reviewCard and added sub-routing for search page

--- a/frontend/src/components/SearchPage/SearchPage.css
+++ b/frontend/src/components/SearchPage/SearchPage.css
@@ -60,3 +60,10 @@
 .Link {
     padding: 1rem;
 }
+
+.RestaurantSearch {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin: 10px;
+}
