--- a/frontend/src/components/UserCard/UserCard.css
+++ b/frontend/src/components/UserCard/UserCard.css
@@ -20,16 +20,25 @@
 .UpperRight-Upper-UserCard {
     width: 100%;
     height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 1px solid red;
 }
 
 .UpperRight-Lower-UserCard {
     width: 100%;
     height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 1px solid red;
 }
 
 .LowerUserCard {
     height: 100px;
     border: 1px solid red;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
