added restaurant page (to be styled), finished search page (to be styled)

--- a/frontend/src/components/RestaurantCard/RestaurantCard.css
+++ b/frontend/src/components/RestaurantCard/RestaurantCard.css
@@ -1,6 +1,6 @@
 
 .RestaurantCard {
-    border: 1px solid red;
+    border: 1px solid grey;
     margin: 10px;
     width: 271px;
     flex-basis: 271px;
