--- a/frontend/src/components/UserCard/UserCard.css
+++ b/frontend/src/components/UserCard/UserCard.css
@@ -1,5 +1,5 @@
 .UserCard {
-    border: 1px solid red;
+    border: 1px solid grey;
     margin: 10px;
     width: 271px;
     height: 188px;
@@ -12,9 +12,14 @@
 }
 
 .UpperLeft-UserCard {
+    /*display: flex;*/
     width: 66px;
     height: 100%;
     border: 1px solid red;
+}
+
+.UpperLeft-UserCard img {
+    width: 66px;
 }
 
 .UpperRight-Upper-UserCard {
