--- a/frontend/src/components/RestaurantCard/RestaurantCard.css
+++ b/frontend/src/components/RestaurantCard/RestaurantCard.css
@@ -1,6 +1,8 @@
 
 .RestaurantCard {
     border: 1px solid grey;
+    border-top: orange 7px solid;
+    border-radius: 3px;
     margin: 10px;
     width: 271px;
     flex-basis: 271px;
