all props of the restaurant displayed

--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -18,9 +18,10 @@ li {
 }
 
 .imgFooter {
-    height: 30px;
-    width: 30px;
+    height: 35px;
+    width: 35px;
     margin: 5px;
     size: 5px;
     padding-right: 15px;
+    padding-top: 6%;
 }
