--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -15,17 +15,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: calc(100% - 200px);
+    width: calc(100% - 618px);
 }
 
 .header-font-size {
+    color: #4a4a4a;
     font-size: 20px;
     font-family: Arial;
 }
 
 
 .header-button-left {
-    margin-right: 3px;
+    margin-right: 1px;
     width: 100px;
     height: 41px;
     border-radius: 28px 0 0 28px;
