--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -6,11 +6,12 @@
 }
 
 body {
-    background-color: #f8f8f8;
+    background-color: white;
 }
 
 .restaurant-card-wrapper {
     display: flex;
+    background-color: #f8f8f8;
     justify-content: center;
     flex-direction: column;
     margin-top: 20px;
@@ -20,5 +21,5 @@ body {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    margin: 10px;
+    margin: 40px 20px 20px 20px;
 }
