--- a/frontend/src/components/RestaurantDetailView/RestaurantDetailView.css
+++ b/frontend/src/components/RestaurantDetailView/RestaurantDetailView.css
@@ -1,4 +1,19 @@
+.restaurant-banner {
+    position: relative;
+    width: 1440px;
+    height: 496px;
+}
+
+.banner_and_box {
+    width: 100%;
+    height: 496px;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+}
+
 .restaurant-banner img {
+    z-index: 0;
     height: 496px;
     width: 1440px;
 }
@@ -11,4 +26,127 @@
 .review-list {
     display: flex;
     border: 1px solid red;
+    flex-flow: row wrap;
+}
+
+.restaurant-bottom-left-container {
+    width: 50%;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.business-hours {
+    display: flex;
+    border-bottom: 1px solid grey;
+}
+
+.business-hours h1 {
+    padding: 10px;
+}
+
+.price-level {
+    display: flex;
+}
+
+.price-level h1 {
+    padding: 10px;
+}
+
+.actions {
+    display: flex;
+}
+
+.map-box {
+    position: absolute;
+    height: 336px;
+    width: 361px;
+    margin-top: -400px;
+    margin-left: 800px;
+    background-color: white;
+}
+
+.map-box img {
+    height: 167px;
+    width: 361px;
+}
+
+.first-row {
+    display: flex;
+    align-items: center;
+    width: 361px;
+    height: 56px;
+}
+
+.first-row img {
+    width: 19px;
+    height: 26px;
+    margin-left: 20px;
+}
+
+.second-row {
+    display: flex;
+    align-items: center;
+    width: 361px;
+    height: 56px;
+}
+
+.second-row img {
+    margin-left: 20px;
+    width: 19px;
+    height: 26px;
+}
+
+.third-row {
+    display: flex;
+    align-items: center;
+    width: 361px;
+    height: 56px;
+}
+
+.third-row img {
+    width: 19px;
+    height: 26px;
+    margin-left: 20px;
+}
+
+.rows {
+    background-color: white;
+}
+
+.street {
+    margin-left: 30px;
+}
+
+.small-banner {
+    position: absolute;
+    background-color: black;
+    opacity: 50%;
+    height: 40%;
+    width: 100%;
+}
+
+.restaurant-info-container {
+    position: absolute;
+    z-index: 10;
+    width: 420px;
+    height: 180px;
+}
+
+.rating-stars {
+    display: flex;
+}
+
+.rating-stars img {
+    height: 24px;
+    width: 27px;
+}
+
+.stars-rating-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.restaurant-reviews {
+    margin-left: 20px;
 }
