--- a/frontend/src/components/SearchPage/SearchPage.css
+++ b/frontend/src/components/SearchPage/SearchPage.css
@@ -70,3 +70,10 @@
     text-decoration: none;
     padding: 10px;
 }
+
+.restaurant-info-container {
+    margin-left: 100px;
+    margin-top: 10px;
+    border: 1px solid red;
+    color: white;
+}
