--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header-wrapper {
     display: flex;
-    border: 1px solid grey;
+    border: 1px solid #d8d8d8;
     justify-content: space-between;
     height: 71px;
     padding: 0 2rem;
@@ -15,7 +15,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: calc(100% - 618px);
+    width: calc(100% - 700px);
 }
 
 .header-font-size {
@@ -29,6 +29,7 @@
     margin-right: 1px;
     width: 100px;
     height: 41px;
+    border: none;
     border-radius: 28px 0 0 28px;
     background-color: #e47d31;
     color: white;
@@ -38,6 +39,7 @@
 .header-button-right {
     width: 100px;
     height: 41px;
+    border:none;
     border-radius: 0 28px 28px 0;
     background-color: #e47d31;
     color: white;
