--- a/frontend/src/components/SearchPage/SearchPage.css
+++ b/frontend/src/components/SearchPage/SearchPage.css
@@ -65,8 +65,10 @@
 }
 
 .LinkText {
+    color: #4c4c4c;
     font-family: Arial;
     font-size: 20px;
+    font-weight: bold;
     text-decoration: none;
     padding: 10px;
 }
