--- a/frontend/src/components/SearchPage/SearchPage.css
+++ b/frontend/src/components/SearchPage/SearchPage.css
@@ -71,6 +71,7 @@
     font-weight: bold;
     text-decoration: none;
     padding: 10px;
+    margin-right: 50px;
 }
 
 .restaurant-info-container {
