--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -96,14 +96,13 @@
     /* margin-top: 25px;
     margin-left: 10vw; */
     height: 400px;
-    flex-direction: column;
+    flex-direction: row;
     position: absolute;
     top: 67px;
     left: 40px;
 }
 
-.left_user_data {
-    
+.left_user_data {   
     width: 141px;
     height: 22px;
     font-family: Helvetica;
@@ -111,5 +110,21 @@
     font-weight: bold;
     text-align: center;
     color: #4c4c4c;
+}
+
+.optionUser {
+    width: 100px;
+    height: 22px;
+    font-family: Helvetica;
+    font-size: 18px;
+    font-weight: 300;
+    color: #303030;
+}
+
+.middleInfoCard {
+    display: flex;
+    margin-top: 80px;
+    margin-left: 10px;
+
 }
 
