--- a/frontend/src/components/ListReviews/ListReviews.css
+++ b/frontend/src/components/ListReviews/ListReviews.css
@@ -1,6 +1,7 @@
 .ListReviews-Container {
+    background-color: #f8f8f8;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    margin: 10px;
+    margin: 50px 0px 0px 0px;
 }
