--- a/frontend/src/components/ReviewCard/ReviewCard.css
+++ b/frontend/src/components/ReviewCard/ReviewCard.css
@@ -1,11 +1,20 @@
 .ReviewCard {
-    border: 1px solid red;
+    background-color: #ffffff;
+    border: 1px solid #ebebeb;
+    border-top:#e47d31 7px solid;
+    border-radius: 3px;
     height: 410px;
     width: 271px;
+    margin: 10px;
 }
 
 .Button-Container {
     border: 1px solid red;
     justify-content: center;
     display: flex;
+}
+
+.Review-Comments {
+    font-size: large;
+    margin: 5px 0px 5px 0px;
 }
